--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<nav id="nav">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="https://www.dropbox.com/s/m9mwfa79xy2tjaf/KhoslaCV_Aug2020.pdf?dl=0" target="_blank" >CV</a></li>
+						<li><a href="KhoslaCV_Aug2020.pdf" target="_blank" >CV</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
